Completed ApiResultsQueryController
